# TSA-soft-dev-backend-2026

./: .env.example  .gitignore  ARCHITECTURE.md  COMMIT_MESSAGE.txt  DEPLOY.md  FRONTEND_GUIDE.md  LICENSES.md  PHASE4_DETECTION_BLOCKER.md  README.md  SERVER_ACCESS.md  desk.HEIC  drawer.HEIC  dresser.HEIC  main.py  organizer.HEIC  pf_test.py  pyproject.toml  requirements-deepseek.txt  requirements.txt  setup_weights.py  shelf.HEIC  wsgi.py
ImageSimilarity/: __init__.py  embed_image.py
ImageSimilarity/dinov3-vitl16/: config.json
ObjectDetection/: __init__.py  detect_objects.py
RememberMode/grounding-dino/: crop-dino.py
ScanMode/: main.py  utils.py
ScanMode/ImageSimilarity/: embed_image.py
ScanMode/ObjectDetection/: detect_objects.py
VisualMemoryIOS/: ContentView.swift  VisualMemoryIOSApp.swift
VisualMemoryIOS.xcodeproj/: project.pbxproj
VisualMemoryIOS/Managers/: CameraManager.swift
VisualMemoryIOS/Views/: CameraPreviewView.swift
benchmarks/: CAPTURE_GUIDE.md  PHASE6_DEGRADATION.md  dataset.csv  dataset_degraded.csv  negative_dataset.csv  text_likelihood_sweep.json
benchmarks/baselines/: perf_ocr_scan_ab_2026-03-29.csv
benchmarks/baselines/audio_intent/: baseline_metrics.csv  baseline_note.txt
benchmarks/baselines/http/: http_system_20260330T143148Z.csv
benchmarks/results/: blur_curve.csv  brightness_curve.csv  degradation_zones.csv  noise_curve.csv
deploy/: env.example  install.sh  install_gpu_deps.sh  memory_cleanup.sh  migrate_core_to_py312.sh  ocr.env.example  secure_permissions.sh  setup_server.sh  spaitra-core.service  spaitra-ocr.service  spaitra.service
depth_demo/: depth_test.py  ground_truth.json
depth_estimation/: estimator.py  test_estimator.py
docs/: ARCHITECTURE.md  CITATIONS.bib  DEPLOY.md  FRONTEND_GUIDE.md  LICENSES.md  LOGGING.md  SERVER_ACCESS.md  UX.md
embed_image/: __init__.py  embed_image.py
object_detection/: __init__.py  detect_all_objects.py  prompt_based_detector.py
old_depth_demo/: QUICKSTART.md  README.md  __init__.py  depth_image.heic  hybrid_finder.py  semantic_matcher.py  test_depth_pro  test_depth_pro_optimized
remember_mode/: __init__.py  main.py  prompt_based_detector.py
remember_mode/demo_images/: Wallet.heic
scan_mode/: main.py
scan_mode/image_similarity/: embed_image.py
scan_mode/object_detection/: detect_objects.py
services/: __init__.py
services/core/: __init__.py  app.py  requirements.txt  run.py  wsgi.py
services/ocr/: __init__.py  app.py  requirements.txt  run.py
src/visual_memory/: __init__.py
src/visual_memory/api/: app.py  narration.py  pipelines.py  run.py  voice_session.py
src/visual_memory/benchmarks/: ask_benchmark.py  check_dataset.py  create_degraded.py  degradation_curves.py  format_results.py  full_benchmark.py  redact_receipt.py  text_likelihood_tuning.py
src/visual_memory/config/: __init__.py  settings.py  user_settings.py
src/visual_memory/database/: __init__.py  store.py
src/visual_memory/engine/: __init__.py  model_registry.py  visual_attributes.py
utils/: __init__.py  image_utils.py  similarity_utils.py
(+157 files in other folders)
