[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-memory"
version = "0.1.0"
description = "Visual memory system with object detection for TSA Software Development app"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.56.0",
    "pillow>=9.0.0",
    "pillow-heif>=0.10.0",
    "ultralytics>=8.0.0",
    "huggingface_hub>=0.26.0",
    "depth-pro @ git+https://github.com/apple/ml-depth-pro.git",
    "paddleocr>=3.2.0",
    "einops",
    "addict",
    "easydict",
    "flask>=3.0.0",
]

[project.scripts]
remember-mode = "visual_memory.pipelines.remember_mode.main:main"
scan-mode = "visual_memory.pipelines.scan_mode.main:main"

[tool.setuptools.packages.find]
where = ["src"]
